--- a/Project1/Project1/Base.lproj/LaunchScreen.storyboard
+++ b/Project1/Project1/Base.lproj/LaunchScreen.storyboard
@@ -18,23 +18,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="TbO-mV-xLG">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="iAe-wr-Ied">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="title" translatesAutoresizingMaskIntoConstraints="NO" id="lDK-ia-UGh">
-                                <rect key="frame" x="155" y="92" width="291" height="75"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="title" translatesAutoresizingMaskIntoConstraints="NO" id="Ulm-Jl-vDq">
+                                <rect key="frame" x="150" y="157" width="300" height="224"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="Rkg-tz-fBG"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="lDK-ia-UGh" firstAttribute="centerX" secondItem="TbO-mV-xLG" secondAttribute="centerX" id="9tB-zY-3dE"/>
-                            <constraint firstItem="TbO-mV-xLG" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="Kcv-xy-yZI"/>
-                            <constraint firstItem="lDK-ia-UGh" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="72" id="P0N-DO-fyN"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="TbO-mV-xLG" secondAttribute="bottom" id="WcE-2A-BMs"/>
-                            <constraint firstItem="lDK-ia-UGh" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="135" id="ee6-m7-Uo4"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="lDK-ia-UGh" secondAttribute="bottom" constant="433" id="emo-Eq-jrj"/>
-                            <constraint firstItem="TbO-mV-xLG" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="nec-td-YcE"/>
-                            <constraint firstAttribute="trailing" secondItem="TbO-mV-xLG" secondAttribute="trailing" id="oFC-kB-zwa"/>
+                            <constraint firstItem="iAe-wr-Ied" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-20" id="K7c-x3-TaU"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Ulm-Jl-vDq" secondAttribute="bottom" constant="219" id="XSq-UB-rI1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="iAe-wr-Ied" secondAttribute="trailing" constant="-20" id="duD-CA-Xvd"/>
+                            <constraint firstItem="Ulm-Jl-vDq" firstAttribute="centerX" secondItem="iAe-wr-Ied" secondAttribute="centerX" id="hFX-y2-QsN"/>
+                            <constraint firstItem="Ulm-Jl-vDq" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="137" id="ocZ-tt-eBd"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="iAe-wr-Ied" secondAttribute="bottom" id="ud9-vr-stX"/>
+                            <constraint firstItem="iAe-wr-Ied" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="zgI-xR-VDf"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -44,7 +46,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launch" width="640" height="640"/>
-        <image name="title" width="500" height="200"/>
+        <image name="launch" width="425" height="650"/>
+        <image name="title" width="792" height="612"/>
     </resources>
 </document>
